Fixed backspace not showing 0 if lenght <= 0

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,6 +85,9 @@ h1 {
   white-space: nowrap;
   padding: 12px;
   border-radius: 7px 7px 0 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .calc-btn-operator {
